force-app/main/default/objects/WhiteSpace_Custom_Datatable__mdt/WhiteSpace_Custom_Datatable__mdt.object-meta.xml
<CustomObject>
    <label>WhiteSpace Custom Datatable</label>
    <pluralLabel>WhiteSpace Custom Datatables</pluralLabel>
</CustomObject>