force-app/main/default/objects/WhiteSpace_Custom_Datatable__mdt/fields/Related_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Field__c</fullName>
    <label>Related Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>