force-app/main/default/objects/WhiteSpace_Custom_Datatable__mdt/fields/Table_Title__c.field-meta.xml
<CustomField>
    <fullName>Table_Title__c</fullName>
    <label>Table Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>