force-app/main/default/objects/WhiteSpace_Custom_Datatable__mdt/fields/Where_Condition__c.field-meta.xml
<CustomField>
    <fullName>Where_Condition__c</fullName>
    <label>Where Condition</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>